# computer_vision

./: .gitignore  README.md  get_top  hysteresis.cpp  masker.cpp  rgb-gen.cpp
alt_classifier/: CMakeLists.txt  package.xml
alt_classifier/src/: thresh_node.cpp  threshnode2.cpp
birds_eye/: CMakeLists.txt  README.txt  package.xml
birds_eye/src/: birds_eye_node.cpp  top_view.txt  topv.py  topv.py~
classifier/: CMakeLists.txt  README.md  mlp.yml  package.xml  pipeline.launch
classifier/launch/: pipeline.launch  pipeline2.launch  pipeline3.launch
classifier/src/: classifier_node.cpp  client.cpp  gslicr_ros.cpp  lane.pkl  lane2.pkl  master.cpp  mlp.yml  mlp4layer.yml  mlp5layer.yml  new_master.cpp  relu.h5  relu_theano.h5  rospy  sigmoid.h5  te.cpp  test.py  test.txt  test_ROS.py  test_ROS_rf.py  threshold.py  thresholder.cpp  trainer.cpp
classifier/src/gSLICr_Lib/engines/: gSLICr_seg_engine.cpp
classifier/srv/: lane_classifier.srv
deep/: CMakeLists.txt  README.md  package.xml
deep/src/: deep_classify.py  model.py
fast_scnn/: CMakeLists.txt  Train.ipynb  demo.py  model  model_gray  package.xml  train.ipynb
fast_scnn/cmake/Modules/: FindTensorRT.cmake
fast_scnn/include/tensorrt/: argsParser.h  common.h  logger.h
fast_scnn/launch/: fast_scnn.launch
fast_scnn/models/: fast_scnn.ipynb  fast_scnn.onnx  fast_scnn.py  fast_scnn_metadata.txt  fast_scnn_up.ipynb
fast_scnn/models/.ipynb_checkpoints/: fast_scnn-checkpoint.py  fast_scnn_up-checkpoint.py
fast_scnn/preprocessing/: demo.py  pt_to_onnx.py  split_data.py  train.ipynb
fast_scnn/preprocessing/models/: fast_scnn.py  fast_scnn_params.pt
fast_scnn/preprocessing/utils/: common_utils.py  dataset.py  train_util.py
fast_scnn/src/: fast_scnn_node.cpp
fast_scnn/src/tensorrt/: logger.cpp
fast_scnn/utils/: common_utils.ipynb  common_utils.py  dataset.ipynb  split_data.ipynb  split_data.py  train_util.ipynb  train_util.py
fast_scnn/utils/.ipynb_checkpoints/: common_utils-checkpoint.ipynb  dataset-checkpoint.py
gSLICr/: CMakeLists.txt  data_giver.cpp  demo-for-imgs.cpp  demo.cpp
gSLICr/gSLICr_Lib/engines/: gSLICr_core_engine.cpp  gSLICr_core_engine.h
gslicr_ros/: CMakeLists.txt  package.xml
gslicr_ros/src/: gslicr_ros.cpp
gslicr_ros/src/gSLICr_Lib/engines/: gSLICr_core_engine.cpp  gSLICr_core_engine.h
image/: CMakeLists.txt  README.md  package.xml
image/src/: denoise.py  fit.py  handle_classify.py  threshold.py
masker/: CMakeLists.txt  README.md  package.xml
masker/src/: masker_node.cpp
potholes/: CMakeLists.txt  detect_potholes.cpp  package.xml
potholes/src/: detect_potholes.cpp
top_view/: CMakeLists.txt  package.xml
top_view/launch/: automated_top_view.launch  top_view2.launch
top_view/src/: top_view (calculated).txt  top_view (calibrated for 10-degrees).txt  top_view.txt  top_view_node.cpp  top_view_node2.cpp
zed-ros-wrapper/launch/: zed.launch  zed_camera.launch
zed-ros-wrapper/src/: zed_wrapper_nodelet.cpp
